--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid fluid-custom p-4">
         <div class="container">
             <div class="row oben">
-                <div class="col-8">
+                <div class="col-sm">
+                    <h2 class="text-center p-4">THE AWESOME PING-PONG SCOREBOARD</h2>
                 </div>
             </div>
-            <div class="row haupt align-items-center justify-content-around">
-                <div class="col-8">
+            <div class="row  align-items-center justify-content-around ">
+                <div class="col-sm haupt p-5">
                     <div class="row">
                         <div class="col  text-center  p-5">
-                            <button type="button" class="btn btn-danger">Danger</button>
+                            <button type="button" id="newGame"  class="btn btn-danger">NEW GAME</button>
                         </div>
                     </div>
                     <div class="row">
@@ -30,43 +31,29 @@
                             <div class="row">
                                 <div class="col-6">
                                     <h2 class="">PLAYER 1</h2>
-                                    <p class="">0</p>
-                                    <button type="button" class="btn btn-danger">Danger</button>
+                                    <p id="score1">0</p>
+                                    <button type="button" id="pl1" class="btn btn-danger">POINT</button>
                                 </div>
                                 <div class="col-6">
-                                    <h2 class="">PLAYER 1</h2>
-                                    <p class="">0</p>
-                                    <button type="button" class="btn btn-danger">Danger</button>
+                                    <h2 class="">PLAYER 2</h2>
+                                    <p id="score2">0</p>
+                                    <button type="button" id="pl2" class="btn btn-danger">POINT</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col  text-center  p-5">
-                            <button type="button" class="btn btn-danger">Danger</button>
+                            <button type="button" class="btn btn-danger">Reset</button>
                         </div>
                     </div>
-                    <!-- <div class="row justify-content-center">
-                        <div class="col  text-center  p-5">
-                            <h2 class="p-5">PLAYER 1</h2>
-                            <p class="p-5">0</p>
-                            <button type="button" class="btn btn-danger">Danger</button>
-                        </div>
-                        <div class="col text-center">
-                            <button type="button" class="btn btn-dark">Dark</button>
-                            <button type="button" class="btn btn-dark">Dark</button>
-                        </div>
-                        <div class="col text-center p-5">
-                            <h2 class="p-5">PLAYER 1</h2>
-                            <p class="p-5">0</p>
-                            <button type="button" class="btn btn-danger">Danger</button>
-                        </div> -->
+                    
                 </div>
             </div>
         </div>
     </div>
     </div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
