--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-sm haupt p-5">
                     <div class="row">
                         <div class="col  text-center  p-5">
-                            <button type="button" id="newGame" class="btn btn-danger">NEW GAME</button>
+                            <button type="button" id="newGame" class="btn btn-dark">NEW GAME</button>
                         </div>
                     </div>
                     <div class="row">
@@ -34,12 +34,12 @@
                                 <div class="col-6">
                                     <h2 id="player1" class="player">PLAYER 1</h2>
                                     <p id="score1" class="score">0</p>
-                                    <button type="button" id="pl1" class="btn btn-danger">POINT</button>
+                                    <button type="button" id="pl1" class="btn btn-dark">POINT</button>
                                 </div>
                                 <div class="col-6">
                                     <h2 id="player2" class="player">PLAYER 2</h2>
                                     <p id="score2" class="score">0</p>
-                                    <button type="button" id="pl2" class="btn btn-danger">POINT</button>
+                                    <button type="button" id="pl2" class="btn btn-dark">POINT</button>
                                 </div>
                             </div>
                         </div>
@@ -49,14 +49,14 @@
 
                         <div class="col text-center mt-5">
                             <input class="play1" type="text" placeholder="Player Name">
-                            <button type="button" id="plBtn" class="btn btn-danger" value="Name">Submit</button>
+                            <button type="button" id="plBtn" class="btn btn-dark" value="Name">Submit</button>
                             <input class="play2" type="text" placeholder="Player Name">
                         </div>
 
                     </div>
                     <div class="row">
                         <div class="col  text-center  p-5">
-                            <button type="button" id="resetName" class="btn btn-danger">Reset Names</button>
+                            <button type="button" id="resetName" class="btn btn-dark">Reset Names</button>
                         </div>
                     </div>
 
