--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row ">
                 <div class="col-sm oben">
-                    <h2 class="text-center p-4" id="headName">THE AWESOME PING-PONG SCOREBOARD</h2>
+                    <h2 class="text-center p-4" id="headName"></h2>
                 </div>
             </div>
             <div class="row  align-items-center justify-content-around ">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="row">
                         <div class="col  text-center  p-5">
-                            <button type="button" id="resetName" class="btn btn-dark">Reset Names</button>
+                            <button type="button" id="resetName" class="btn btn-dark ">Reset Names</button>
                         </div>
                     </div>
 
@@ -67,6 +67,8 @@
     </div>
     </div>
     <script src="script.js"></script>
+    
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
